// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
// ------------------------------------------------------------

syntax = "proto3";

package dapr.pkg.proto.operator.v1;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/operator/v1";

service Operator {
  // ComponentUpdate sends events to Dapr sidecars upon component changes.
  rpc ComponentUpdate (google.protobuf.Empty) returns (stream ComponentUpdateEvent) {}
  // GetComponents returns a list of available components
  rpc GetComponents (google.protobuf.Empty) returns (GetComponentResponse) {}
  // GetConfiguration returns a given configuration by name
  rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationResponse) {}
}

message ComponentUpdateEvent {
  google.protobuf.Any component = 1;
}

message GetComponentResponse {
  repeated google.protobuf.Any components = 1;
}

message GetConfigurationRequest {
  string name = 1;
  string namespace = 2;
}

message GetConfigurationResponse {
  google.protobuf.Any configuration = 1;
}
